@@ -387,8 +387,11 @@ public class KafkaMessageListenerContainer<K, V> extends AbstractMessageListener
 		ListenerConsumer(GenericMessageListener<?> listener, ListenerType listenerType) {
 			Assert.state(!this.isAnyManualAck || !this.autoCommit,
 					"Consumer cannot be configured for auto commit for ackMode " + this.containerProperties.getAckMode());
-			final Consumer<K, V> consumer = KafkaMessageListenerContainer.this.consumerFactory.createConsumer(
-					this.consumerGroupId, KafkaMessageListenerContainer.this.clientIdSuffix);
+			final Consumer<K, V> consumer =
+					KafkaMessageListenerContainer.this.consumerFactory.createConsumer(
+							this.consumerGroupId,
+							this.containerProperties.getClientId(),
+							KafkaMessageListenerContainer.this.clientIdSuffix);
 			this.consumer = consumer;
 
 			ConsumerRebalanceListener rebalanceListener = createRebalanceListener(consumer);
