@@ -139,7 +139,7 @@ public class SeekToCurrentOnErrorBatchModeTests {
 		public ConsumerFactory consumerFactory() {
 			ConsumerFactory consumerFactory = mock(ConsumerFactory.class);
 			final Consumer consumer = consumer();
-			given(consumerFactory.createConsumer(null, "-0")).willReturn(consumer);
+			given(consumerFactory.createConsumer(null, "", "-0")).willReturn(consumer);
 			return consumerFactory;
 		}
 
