@@ -143,7 +143,7 @@ public class SeekToCurrentOnErrorRecordModeTests {
 		public ConsumerFactory consumerFactory() {
 			ConsumerFactory consumerFactory = mock(ConsumerFactory.class);
 			final Consumer consumer = consumer();
-			given(consumerFactory.createConsumer(null, "-0")).willReturn(consumer);
+			given(consumerFactory.createConsumer(null, "", "-0")).willReturn(consumer);
 			return consumerFactory;
 		}
 
