@@ -15,6 +15,13 @@ See <<serdes>> for more information.
 Container Error handlers are now provided for both record and batch listeners that treat any exceptions thrown by the listener as fatal; they stop the container.
 See <<annotation-error-handling>> for more information.
 
+
+==== Client ID
+
+Starting with _version 2.1.1_, it is now possible to set the `client.id` prefix on `@KafkaListener`.
+Previously, to customize the client id, you would need a separate consumer factory (and container factory) per listener.
+The prefix is suffixed with `-n` to provide unique client ids when using concurrency.
+
 ==== Migration Guide from 2.0
 
 https://github.com/spring-projects/spring-kafka/wiki/Spring-for-Apache-Kafka-2.0-to-2.1-Migration-Guide[2.0 to 2.1 Migration].
